testsuite/tests/interpreter_errors/call_property_wrong_arity_2/test.out
script.lkql:2:7: error: Expected 1 arguments but got 0
  2 | print(te.p_designated_type_decl_from())
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
